# 2G_ADAS

./: .gitignore  README.md
apps/: .gitignore  Makefile  README.md  v131_build.sh  v133_build.sh  v141_build.sh
apps/linde/: .gitignore  CMakeLists.txt  VERSION_V131  VERSION_V133  VERSION_V141  prj.conf  version.cmake  version.h.in
apps/linde/boards/: aidong_linde429v13.conf  aidong_linde429v14.conf
apps/linde/lib/can/include/: handler_caninfo.h  hw_can.h  proto_adapt.h
apps/linde/src/: .gitignore  main.c
apps/linde/src/factory_test/: factory_test.c  factory_test.h
apps/linde/src/factory_test/v133_factory_test/: factory_test_unique.h  v133_factory_test_unique.c
apps/linde/src/factory_test/v141_factory_test/: factory_test_unique.h  v141_adc_test.c  v141_adc_test.h  v141_factory_test_unique.c  v141_gpio_test.c  v141_gpio_test.h
apps/linde/src/fota/: fota.c  fota.h  fota_upgrade_thread.c  fota_upgrade_thread.h  my_flash.c  my_flash.h
apps/linde/src/fs/: Makefile  defines.h  tm_stm32f4_dma.h  tm_stm32f4_fatfs.h  tm_stm32f4_gpio.h
apps/linde/src/fs/fatfs/: Makefile  diskio.h  ff.h
apps/linde/src/fs/fatfs/drivers/: Makefile  fatfs_mmc_sdio.c  fatfs_mmc_sdio.h  fatfs_sd_sdio.h
apps/linde/src/fs/fatfs/option/: Makefile  syscall.c
apps/linde/src/inter-thread_comm/: fifo.c  fifo.h  file.c  file.h  sempho.c  sempho.h
apps/linde/src/mpu/: m_common.c  m_common.h  m_config.c  m_config.h  m_queue.c  m_queue.h  m_state_detection.c  m_state_detection.h  m_utils.c  m_utils.h  thread_mpu.c  thread_mpu.h
apps/linde/src/mpu/bmi160/: hw_bmi160.c  hw_bmi160.h  hw_mse.h
apps/linde/src/mpu/mpu6050/: hw_mpu6050.c  hw_mpu6050.h  hw_mse.h
apps/linde/src/netlib/: atc.c  atc.h  atcip.c  atcip.h  atd.c  atd.h  gpd.c  gpd.h  gpio.c  gps.c  netlibgpio.h
apps/linde/src/networkingThread/: message_center_thread.c  message_center_thread.h  network_thread.c  network_thread.h  offline_thread.c  offline_thread.h
apps/linde/src/networkingThread/cache/: cache_box.c  cache_box.h  cache_opt.c  cache_opt.h
apps/linde/src/protocol/: aidong_custom.c  aidong_custom.h  hw_gps_parser.c  hw_gps_parser.h  protocol.c  protocol.h  random.c  random.h  server_interface.c  server_interface.h  thread_gps.c  thread_gps.h
apps/linde/src/qcloud/: README.md
apps/linde/src/qcloud/samples/mqtt/: mqtt_sample.c
apps/linde/src/qcloud/samples/scenarized/: aircond_shadow_sample.c  aircond_shadow_sample_v2.c  door_mqtt_sample.c
apps/linde/src/qcloud/sdk-tests/unit_test/src/: unit_helper_functions.c
apps/linde/src/qcloud/src/coap/src/: coap_client.c  coap_client_auth.c  coap_client_message.c
apps/linde/src/qcloud/src/device/include/: qcloud_iot_device.h
apps/linde/src/qcloud/src/device/src/: device.c
apps/linde/src/qcloud/src/mqtt/include/: mqtt_client.h
apps/linde/src/qcloud/src/mqtt/src/: mqtt_client.c  mqtt_client_common.c  mqtt_client_connect.c  mqtt_client_publish.c  mqtt_client_subscribe.c  mqtt_client_yield.c
apps/linde/src/qcloud/src/ota/src/: ota_fetch.c
apps/linde/src/qcloud/src/platform/os/linux/: HAL_TCP_linux.c
apps/linde/src/qcloud/src/platform/os/zephyr/: HAL_OS_linux.c  HAL_TCP_linux.c  HAL_Timer_linux.c
apps/linde/src/qcloud/src/sdk-impl/: qcloud_iot_export.h  qcloud_iot_import.h  qcloud_iot_sdk_impl.c
apps/linde/src/qcloud/src/sdk-impl/exports/: qcloud_iot_export_log.h  qcloud_iot_export_mqtt.h
apps/linde/src/qcloud/src/shadow/include/: shadow_client.h
apps/linde/src/qcloud/src/shadow/src/: shadow_client_json.c  shadow_client_manager.c
apps/linde/src/qcloud/src/system/src/: system_mqtt.c
apps/linde/src/qcloud/src/utils/farra/: utils_timer.c
apps/linde/src/qcloud/src/utils/lite/: json_token.c
apps/linde/src/rfid/: rfid_protocol_wg34.c  rfid_protocol_wg34.h  rfid_thread.c  rfid_thread.h
apps/linde/src/thread/: hw_led.c  hw_power.c  hw_power.h  thread_file.c  thread_file.h  thread_led.c  thread_led.h  thread_stb.c  thread_stb.h  thread_wdt.c  thread_wdt.h
apps/linde/src/utils/: config.c  config.h  crc16.c  hw_gpio.c  hw_gpio.h  hw_rs485.c  hw_rs485.h  hw_uart.h  hw_voltage.c  hw_voltage.h  modbus_rtu.c  modbus_rtu.h  msg_structure.h  my_bytequeue.c  my_bytequeue.h  my_file.c  my_file.h  my_md5.c  my_md5.h  my_misc.h  my_task.c  my_task.h  my_tool.c  my_tool.h  rtc.c  rtc.h  rtc_timestamp.c  rtc_timestamp.h  tm_stm32f4_otp.c  tm_stm32f4_otp.h  util_fifo.c  util_fifo.h
apps/linde/src/utils/v131/: hw_version.c
apps/linde/src/utils/v133/: hw_version.c
apps/linde/src/utils/v141/: hw_version.c  hw_version.h
apps/linde/src/vehicle_ctrl/: vehicle_ctrl_led.c  vehicle_ctrl_led.h  vehicle_ctrl_relay.c  vehicle_ctrl_relay.h  vehicle_ctrl_thread.c  vehicle_ctrl_thread.h
apps/linde/src/vehicle_ctrl/active_beep/: active_beep.c  active_beep.h  vehicle_ctrl_beep.h
apps/linde/src/vehicle_ctrl/passive_beep/: hw_pwm.c  hw_pwm.h  passive_beep.c  passive_beep.h  vehicle_ctrl_beep.h
apps/linde/src/work_data/can/: thread_can.c  thread_can.h  thread_work_data.h
apps/linde/src/work_data/no_can/: handler_nocaninfo.c  handler_nocaninfo.h  sensor_decoder.c  sensor_decoder.h  thread_no_can.c  thread_no_can.h  thread_work_data.h
apps/linde/src/work_data/no_can/fork_sensor/: fork_sensor_hoare.c  fork_sensor_hoare.h  fork_sensor_pressure.c  fork_sensor_pressure.h  fork_updown_sensor_microSwitch.c  fork_updown_sensor_microSwitch.h
apps/linde/src/work_data/no_can/genenal_sensor/: batter_stat_alg.c  batter_stat_alg.h  genenal_sensor.c  genenal_sensor.h  seatType_selfAdapt_alg.c  seatType_selfAdapt_alg.h
apps/linde/src/work_data/no_can/move_sensor/: move_sensor_hoare.c  move_sensor_hoare.h  move_sensor_microSwitch.c  move_sensor_microSwitch.h  move_sensor_mpu.c  move_sensor_mpu.h  move_sensor_speed.c  move_sensor_speed.h
apps/linde/src/work_data/rs485_sensor_thread/: rs485Thread.c  rs485Thread.h  tray_pressure.c  tray_pressure.h
drivers/clock_control/: CMakeLists.txt  Kconfig.stm32
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.stm32l1x  dma_stm32f4x.c  dma_stm32l1x.c
drivers/flash/: CMakeLists.txt  (+4 more)
keys/: syp_sign.pem  syp_sign_pub.c.import  syp_sign_pub.der
(+121 files in other folders)
